--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    //safeargs
+//    id 'androidx.navigation.safeargs.kotlin'
+    //roomDB
+    id 'kotlin-kapt'
 }
 
 android {
@@ -45,4 +49,42 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
+// splash
+    implementation 'androidx.core:core-splashscreen:1.0.0'
+
+// retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+// Coroutine
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+
+// DateStore
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
+
+// Lottie
+    implementation "com.airbnb.android:lottie:3.4.0"
+
+    implementation("androidx.room:room-runtime:2.4.1")
+    annotationProcessor("androidx.room:room-compiler:2.4.1")
+
+// To use Kotlin annotation processing tool (kapt)
+    kapt("androidx.room:room-compiler:2.4.1")
+
+// optional - Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:2.4.1")
+
+// livedata
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.1")
+
+// Coroutine WorkManager
+    implementation("androidx.work:work-runtime-ktx:2.7.1")
+
+    implementation 'androidx.activity:activity-ktx:1.6.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.4'
 }
