--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".IntroActivity"
+            android:name=".view.intro.IntroActivity"
             android:exported="true"
             android:theme="@style/Theme.CoinStudy.Splash">
             <meta-data
